# text_distance

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: damerau_levenshtein.rs  edit.rs  hamming.rs  helpers.rs  jaccard.rs  jaro_winkler.rs  levenshtein.rs  lib.rs  main.rs
tests/: test_damerau_levenshtein.rs  test_edit.rs  test_hamming.rs  test_jaccard.rs  test_jaro_winkler.rs  test_levenshtein.rs
